test/Fail/Sigma-syntax-4.agda
open import Agda.Builtin.Sigma

postulate
  _ : .(A : Set) (x) Set
